дополнила отзывы, добавила на все стрницы свой логотип

--- a/festivals.html
+++ b/festivals.html
@@ -146,6 +146,11 @@
         </div>
       </section>
       <!-- </div> -->
+      <footer>
+        <a class="navbar-brand logo-tbut" href="https://www.shecodes.io/graduates/93245-tetiana-butok" target="_blank"
+          >Tetiana Butok</a
+        >
+      </footer>
     </main>
     <!-- <p>
               "Любовь до потери памяти" по пьесе Валентина Красногорова. В этом спектакле есть множество сюжетных
