--- a/index.html
+++ b/index.html
@@ -276,50 +276,61 @@
         <div class="content">
           <div class="box-wrape glass">
             <div class="circle circle-left">
+              <img src="./img/полина лимпер.jpg" alt="фото журналиста" />
+            </div>
+            <h3>Полина Лимперт</h3>
+            <p>
+              Местный театр в Израиле. На русском языке. Да ещё и на периферии... Более тридцати лет в Ашкелоне
+              существует и творит театр «Менора» имени Владимира Азарова.
+            </p>
+            <p>
+              Вчера я побывала на премьере спектакля «Хочу сниматься в кино» по пьесе Нила Саймона. Да, театр
+              любительский — но в нём всё, как в настоящем профессиональном: Премьеры — по две, аншлаги, благодарные и
+              преданные зрители, полностью заполнившие зал Бейт А-Ам в Ашкелоне. На сцене — всё по-настоящему:
+              декорации, костюмы, свет, звук… Всё, как должно быть! Но главное — спектакль. Он удался! Совпало всё:
+              удачная пьеса, тонкая режиссура и сильная актёрская игра. Нил Саймон — классик, драматург и сценарист с
+              голливудским размахом. Его пьесы — это вечные хиты. Они не сходят со сцены десятилетиями и в любой стране
+              собирают аншлаги. Сюжет — простой и трогательный: Ребёнок, выросший в неполной семье, мечтает найти отца.
+              И — находит. Спустя годы. И не просто находит, а сближается, влюбляет в себя, начинает по-настоящему
+              любить сама. И пусть это не классическая семья, но родственная связь — восстанавливается. Актёры, особенно
+              исполнительница главной роли, — играли потрясающе! Точно, тонко, эмоционально. В интонациях, в движениях —
+              в каждом жесте. А декорации и костюмы? Просто восторг! Это — настоящий Театр! Особо хочется отметить
+              режиссуру Ирины Лев — профессионально, уверенно, с выстроенной концепцией.
+            </p>
+            <p>
+              С признательностью, Полина Лимперт Журналист (вторая степень), интервьюер, культуролог, популяризатор
+              культурных и туристических событий. Публиковалась в СМИ Израиля, США и России.
+            </p>
+            <br />
+            <strong style="font: 1em sans-serif">Аплодисменты! Спасибо!</strong>
+          </div>
+          <div class="box-wrape glass">
+            <div class="circle circle-left">
               <img src="./img/Natali Shlagin.jpg" alt="фото Natali Shlagin" />
             </div>
             <h3>Natali Shlagin</h3>
             <p>
-              Со спектаклем"Варшавская мелодия"я знакома уже очень давно. Видела его несколько раз в исполнении ведущих
-              артистов лучших театров страны. Но этот спектакль ашкелонского театра произвел на меня особое впечатление.
-              Удивила искренняя, проникновенная игра актеров, продуманность и слаженность всего хода спектакля. Тонкость
-              режиссерского замысла заставила прочувствовать сегодняшнюю злободневную актуальность этой пьесы.
+              Со спектаклем «Варшавская мелодия» я знакома уже давно. Видела его несколько раз — в исполнении ведущих
+              артистов лучших театров страны. Но постановка ашкелонского театра «Менора» произвела на меня особое
+              впечатление. По-настоящему поразила искренняя, проникновенная игра актёров, а также продуманность и
+              слаженность всего спектакля. Каждая деталь была выверена, каждый момент — прочувствован. Тонкий
+              режиссёрский замысел придал пьесе удивительную глубину, позволив по-новому осознать её тревожную,
+              болезненно актуальную суть — особенно сегодня, в наше непростое время.
             </p>
           </div>
           <div class="box-wrape glass">
             <div class="circle circle-left">
-              <img src="./troupe/Ирина Лев-режиссер.jpg" alt="фото актера" />
+              <img src="./img/Mariana Otel_100.jpg" alt="фото актера" />
             </div>
-            <h3>Ирина Лев-режиссер</h3>
+            <h3>Mariana Otel</h3>
             <p>
-              Трудно в наше сложное время думать и говорить об искусстве,литературе театре.Но упоминание театра
-              "Менора",даже вопреки нашей воле,сразу вызывает массу положительных эмоций. Каждый их спектакль-это
-              честная (от большого до мелочей) работа.Благодаря вкусу и такту в выборе репертуара,в режиссерской
-              работе,игре актеров и усилиям всей труппы создаётся та неповторимая творческая атмосфера, за которую мы
-              любим театр "Менора". И вопреки страдающему миру и злу ,бушующему за окном, театр всегда несёт вечные
-              истины- Добро,Любовь,Веру и Надежду......
-            </p>
-          </div>
-          <div class="box-wrape glass">
-            <div class="circle circle-left">
-              <img src="./troupe/Ирина Лев-режиссер.jpg" alt="фото актера" />
-            </div>
-            <h3>Ирина Лев-режиссер</h3>
-            <p>
-              Местный театр в Израиле, да еще на русском языке, да еще на периферии... Более тридцати лет в Ашкелоне
-              творит театр Менора имени Владимира Азарова. Я побывала на вчерашней премьере " Хочу сниматься в кино" по
-              пьесе Нила Саймона (режиссер - Ирина Лев). Театр хоть и любительский, но в нем все как положено в
-              профессиональных театрах: премьеры, причем по два раза...Благодарные и преданные зрители полностью
-              заполнили небольшой зал Бейт а Ам Ашкелона. В этом зале настоящая сцена, декорации, костюмы, свет, звук...
-              Все, как должно быть. Но главное - сам спектакль, который - удался! Тут совпало все: хорошая пьеса, Нил
-              Саймон - действительно голливудский писатель, сценарист и драматург, и все его пьесы - шлягерные, десятки
-              лет не сходят с подмостков театров всего мира, раз за разом собирая аншлаги. Сюжет прост: каждый ребенок,
-              выросший в неполной семье, в которой родители развелись, мечтает о папе. Но некоторым удается его найти.
-              Даже спустя годы. И вновь влюбить его в себя и самой влюбиться, и если и не стать настоящей семьей, то, по
-              крайней мере, наладить родственные связи. Актеры, особенно исполнительница главной роли, играли
-              потрясающе! Все точно по интонации, движениям, эмоциям!... Опять же, декорации и костюмы поражают! Ну,
-              Театр! А еще видна крепкая профессиональная режиссура Ирины Лев. Аплодисменты! Спасибо от благодарного
-              зрителя Полины Лимперт
+              В наше сложное время трудно думать и говорить об искусстве, литературе, театре… Но стоит лишь упомянуть
+              театр «Менора» — и, словно вопреки воле, в душе вспыхивает целый поток положительных эмоций. Каждый
+              спектакль этого театра — это честная работа. Честная во всём: от общего замысла до самых маленьких
+              деталей. Благодаря тонкому вкусу и такту при выборе репертуара, профессиональной режиссуре, убедительной
+              игре актёров и усилиям всей труппы, рождается та самая — неповторимая — творческая атмосфера, за которую
+              мы любим театр «Менора». И пусть за окнами бушует тревожный, страдающий мир — «Менора» остаётся островком
+              света. Театр, как и прежде, несёт вечные ценности: Добро, Любовь, Веру и Надежду.
             </p>
           </div>
         </div>
@@ -410,11 +421,7 @@
         <p>Copyright text 2025 <a href="#">Tetiana</a></p>
       </div> -->
       <footer>
-        <a
-          class="navbar-brand logo-tbut"
-          href="https://www.shecodes.io/graduates/93245-tetiana-butok"
-          title="SheCodes Profile"
-          target="_blank"
+        <a class="navbar-brand logo-tbut" href="https://www.shecodes.io/graduates/93245-tetiana-butok" target="_blank"
           >Tetiana Butok</a
         >
       </footer>
