--- a/repertoire.html
+++ b/repertoire.html
@@ -189,6 +189,11 @@
             </div>
           </div>
         </article>
+        <footer>
+          <a class="navbar-brand logo-tbut" href="https://www.shecodes.io/graduates/93245-tetiana-butok" target="_blank"
+            >Tetiana Butok</a
+          >
+        </footer>
       </section>
     </main>
   </body>
