--- a/troupe.html
+++ b/troupe.html
@@ -582,6 +582,11 @@
           </div>
         </div>
       </section>
+              <footer>
+          <a class="navbar-brand logo-tbut" href="https://www.shecodes.io/graduates/93245-tetiana-butok" target="_blank"
+            >Tetiana Butok</a
+          >
+        </footer>
     </main>
     <script>
       // ! Анимация мигающих звезд | CSS и Javascript
